# eights

./: Cargo.toml
.github/workflows/: rust.yml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/router/: index.js
frontend/src/views/: CrewResults.vue  MensResults.vue  WomensResults.vue
src/: errors.rs  lib.rs  main.rs  model.rs  routes.rs
src/data/: results_men.json  results_women.json
