[package]
name = "eights"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"

[package.metadata.cargo-machete]
ignored = ["strum"]
